added a bit of history

--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@
               effects modifications and some other custom solution, so spent a
               lot of time discussing with Arturo. The two became close friends
               so Alessandro decided to join the team in early 2015.
+              <br /><br />
+              In 2018 Arturo met Giuseppe since they started to play in the
+              same band. The became very soon close friends exchanging each other
+              knowledges about music and electronics. In the early 2019 Giuseppe
+              joined the team as web developer and site maintener.
             </p>
           </div>
         </div>
