--- a/index_ita.html
+++ b/index_ita.html
@@ -338,6 +338,9 @@
               Nel 2014 Arturo incontra Alessandro al Politecnico di Torino.
               Il brillante ricercatore informatico inizia a chiedere modifiche ad effetti ed altre soluzioni custom spendendo molto tempo a discutere con Arturo.
               I due diventano subito molto amici e Alessandro decide di unirsi al team nel team all'inizio del 2015.
+              <br /><br />
+              Nel 2018 Arturo conosce Giuseppe dato che iniziano a suonare nella stessa band. Diventano subito amici molto stretti e iniziano a scambiarsi
+              conoscenze riguardo la musica e l'elettronica. All'inizio del 2019 Giuseppe si unisce al team come web developer e curatore del sito.
             </p>
           </div>
         </div>
