started to fix descriptions

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                   9kg <br>
                   Wireless Footswitch <br><br>
 
-                  NOTE: The cabinet can be customized
+                  NOTE: The cabinet can be customized <br>
                 </p>
               </div>
             </div>
@@ -467,7 +467,12 @@
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
                   Power supply: 9V DC <br>
                   Current consumption: 5mA <br>
-                  True bypass switching system
+                  Power Supply: 9V wall adapter center negative <br>
+                  True bypass switching system <br>
+                  Controls: <br>
+                    Bass: from -10 to +10 dB<br>
+                    Treble: from -10 to +10 dB<br>
+                    Gain: from -5 to +5 dB<br>
                 </p>
               </div>
             </div>
@@ -483,7 +488,10 @@
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
                   Power supply: 9V DC <br>
                   Current consumption: 8mA <br>
-                  True bypass switching system
+                  Power Supply: 9V wall adapter center negative <br>
+                  True bypass switching system <br>
+                  Controls: <br>
+                    Volume: from -10 to +10 dB <br>
                 </p>
               </div>
             </div>
@@ -497,9 +505,12 @@
                 </p>
                 <p class="products-card-hidden-description">
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
-                  Power supply: 9V DC <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 11mA <br>
-                  True bypass switching system
+                  True bypass switching system <br>
+                  Controls: <br>
+                    Depth: the amount of pitch modulation <br>
+                    Rate: the speed of the modulation <br>
                 </p>
               </div>
             </div>
@@ -511,15 +522,15 @@
                   An heavy versatile overdrive to be used in every situation!
                 </p>
                 <p class="products-card-hidden-description">
+                  Dimensions: 112.4 x 60.5 x 27.0 mm <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
+                  Current Consumption: 12mA <br>
+                  True bypass switching system <br>
                   Controls: <br>
                     Volume: amount of volume <br>
                     Drive: amount of gain <br>
                     Focus: tone control. It acts as HPF <br>
-                    Fat/Slim: bass boost in fat mode <br><br>
-                  Dimensions: 112.4 x 60.5 x 27.0 mm <br>
-                  Power Consumption: 12mA @ 9VDC <br>
-                  Power Supply: 9V wall adapter center negative <br>
-                  True bypass <br>              
+                    Fat/Slim: bass boost in fat mode <br> 
                 </p>
               </div>
             </div>
@@ -533,10 +544,14 @@
                 </p>
                 <p class="products-card-hidden-description">
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
-                  Power supply: 9V DC <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 35mA <br>
                   True bypass switching system <br>
-                  Possibility to be extended with a tap tempo pedal  
+                  Controls: <br>
+                    Time: from 0 to 400ms<br>
+                    Repeats: from 0 to infinite<br>
+                    Decay: volume of repetitions<br>
+                    Possibility to be extended with a tap tempo pedal <br>
                 </p>
               </div>
             </div>
@@ -568,8 +583,8 @@
                 </p>
                 <p class="products-card-hidden-description">
                   Dimensions: 200 x 80 x 50 mm <br>
-                  Power supply: 9V DC <br>
-                  Current consumption: 1mA
+                  Power Supply: 9V DC wall adapter center negative <br>
+                  Current consumption: 1mA <br>
                 </p>
               </div>
             </div>
@@ -587,7 +602,6 @@
               <div class="products-card-text">
                 <h2 class="products-card-title">Mr Bender</h2>
                 <p class="products-card-description">
-                  
                 </p>
               </div>
             </div>
@@ -601,9 +615,9 @@
                 </p>
                 <p class="products-card-hidden-description">
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
-                  Power supply: 9V DC <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 7mA <br>
-                  True bypass switching system
+                  True bypass switching system <br>
                 </p>
               </div>
             </div>
@@ -616,9 +630,9 @@
                 </p>
                 <p class="products-card-hidden-description">
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
-                  Power supply: 9V DC <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 15mA <br>
-                  True bypass switching system
+                  True bypass switching system <br>
                 </p>
               </div>
             </div>
@@ -640,6 +654,10 @@
                   A studio high versatile compressor for all your needs!
                 </p>
                 <p class="products-card-hidden-description">
+                  Dimensions: 112.4 x 60.5 x 27.0 mm <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
+                  Current consumption: 100mA <br>
+                  True bypass switching system <br>
                   Controls: <br>
                     Dry/Wet: to choose the amount of effect on your input signal <br>
                     Release <br>
@@ -648,10 +666,6 @@
                     Ratio <br>
                     Manual or Auto: in auto release and attack pots are not used but the effect autonomously set them <br>
                     Soft/Hard: set the compression knee <br><br>
-                  Dimensions: 112.4 x 60.5 x 27.0 mm <br>
-                  Power supply: 9V DC <br>
-                  Current consumption: 100mA <br>
-                  True bypass switching system
                 </p>
               </div>
             </div>
@@ -663,8 +677,14 @@
                   The Division Fuzz gives you the Gilmour’s magic sound. It is designed to have a fat and versatile sound. In few words a magic box under your foot.
                 </p>
                 <p class="products-card-hidden-description">
-                  The Division Fuzz gives you the Gilmour’s magic sound. It is designed to have a fat and versatile sound. In few words a magic box under your foot.
-                </p>
+                  Dimensions: 119 x 94 x 38mm <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
+                  Current consumption:10mA<br>
+                  True bypass switching system <br>
+                  Controls: <br>
+                    Volume <br>
+                    Tone <br>
+                    Sustain <br>
               </div>
             </div>
             <div class="products-card" data-productTag="effects" data-effectTag="distortions">
@@ -676,7 +696,7 @@
                 </p>
                 <p class="products-card-hidden-description">
                   Dimensions: 146 x 120 x 38mm <br>
-                  Power supply: 9V DC <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption:15mA with boost on <br>
                   True bypass switching system <br>
                   Aux input for remote footswitch <br>
@@ -694,7 +714,7 @@
                 </p>
                 <p class="products-card-hidden-description">
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
-                  Power supply: 9V DC <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 30mA <br>
                   True bypass switching system
                 </p>
@@ -710,9 +730,9 @@
                 </p>
                 <p class="products-card-hidden-description">
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
-                  Power supply: 9V DC <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption:21mA <br>
-                  True bypass switching system
+                  True bypass switching system <br>
                 </p>
               </div>
             </div>
@@ -726,9 +746,9 @@
                 </p>
                 <p class="products-card-hidden-description">
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
-                  Power supply: 9V DC <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 80mA <br>
-                  True bypass switching system
+                  True bypass switching system <br>
                 </p>
               </div>
             </div>
