--- a/index.html
+++ b/index.html
@@ -589,11 +589,14 @@
               </div>
             </div>
             <div class="products-card" data-productTag="controllers">
-                <img src="Images/master_midi.png" alt="Controller - Mater Midi" />
+                <img src="Images/master_midi.png" alt="Controller - Master Midi" />
               <div class="products-card-text">
                 <h2 class="products-card-title">Master Midi</h2>
                 <p class="products-card-description">
-                  
+                  A custom MIDI controller. Suitable for controlling MIDI instruments or amplifiers
+                </p>
+                <p class="products-card-hidden-description">
+                  A custom MIDI controller. Suitable for controlling MIDI instruments or amplifiers
                 </p>
               </div>
             </div>
@@ -602,6 +605,17 @@
               <div class="products-card-text">
                 <h2 class="products-card-title">Mr Bender</h2>
                 <p class="products-card-description">
+                  A very rough germanium fuzz
+                </p>
+                <p class="products-card-hidden-description">
+                  Dimensions: 112.4 x 60.5 x 27.0 mm <br>
+                  Power Supply: 9V DC wall adapter center negative <br>
+                  Current consumption: 10mA <br>
+                  True bypass switching system <br>
+                  Controls: <br>
+                    Volume: master volume <br>
+                    Benderness: tone that acts ad HPF <br>
+                    Crazy/Sane: a switch that can smooth the distortion tone acting on the feedback <br>
                 </p>
               </div>
             </div>
@@ -618,6 +632,10 @@
                   Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 7mA <br>
                   True bypass switching system <br>
+                  Controls: <br>
+                    Preamp: the amount of pre gain <br>
+                    Fuzz: tone that acts ad HPF <br>
+                    Master: master volume <br>
                 </p>
               </div>
             </div>
@@ -633,6 +651,9 @@
                   Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 15mA <br>
                   True bypass switching system <br>
+                  Controls: <br>
+                    Amount: the amount of modulation <br>
+                    Smooth: smoother modulation if active <br>
                 </p>
               </div>
             </div>
@@ -641,7 +662,10 @@
               <div class="products-card-text">
                 <h2 class="products-card-title">The Auxiliary</h2>
                 <p class="products-card-description">
-                  
+                  An extention footswtich suitable for TC electronics effects
+                </p>
+                <p class="products-card-hidden-description">
+                  An extention footswtich suitable for TC electronics effects
                 </p>
               </div>
             </div>
@@ -665,7 +689,7 @@
                     Gain <br>
                     Ratio <br>
                     Manual or Auto: in auto release and attack pots are not used but the effect autonomously set them <br>
-                    Soft/Hard: set the compression knee <br><br>
+                    Soft/Hard: set the compression knee <br>
                 </p>
               </div>
             </div>
@@ -682,9 +706,9 @@
                   Current consumption:10mA<br>
                   True bypass switching system <br>
                   Controls: <br>
-                    Volume <br>
-                    Tone <br>
-                    Sustain <br>
+                    Volume: the master volume <br>
+                    Tone: an HPF tone <br>
+                    Sustain: the amount of sustain <br>
               </div>
             </div>
             <div class="products-card" data-productTag="effects" data-effectTag="distortions">
@@ -700,7 +724,14 @@
                   Current consumption:15mA with boost on <br>
                   True bypass switching system <br>
                   Aux input for remote footswitch <br>
-                  Choose to put boost in front or after the distortion
+                  Choose to put boost in front or after the distortion <br>
+                  Controls: <br>
+                    Master: the master volume <br>
+                    Bass: the amount of bass tone <br>
+                    Mid: the amount of mid tone <br>
+                    Hig: the amount of treble tone <br>
+                    Gain: the amount of distortion <br>
+                    Pres: upper/mid range boost control <br>
                 </p>
               </div>
             </div>
@@ -716,7 +747,9 @@
                   Dimensions: 112.4 x 60.5 x 27.0 mm <br>
                   Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 30mA <br>
-                  True bypass switching system
+                  True bypass switching system <br>
+                  Controls: <br>
+                    Threshold: from -70  to +10 dB noise threshold<br>
                 </p>
               </div>
             </div>
@@ -733,6 +766,12 @@
                   Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption:21mA <br>
                   True bypass switching system <br>
+                  Controls: <br>
+                    Speed: gross speed tuning <br>
+                    Fine: fine speed tuning <br>
+                    Depth: the amount of pitch modulation <br>
+                    Space: waveform period regulation <br>
+                    Smooth: fronts stifness regulation <br>
                 </p>
               </div>
             </div>
@@ -749,6 +788,8 @@
                   Power Supply: 9V DC wall adapter center negative <br>
                   Current consumption: 80mA <br>
                   True bypass switching system <br>
+                  Controls: <br>
+                    Reverb: the amount of reverb<br>
                 </p>
               </div>
             </div>
