--- a/index.html
+++ b/index.html
@@ -311,6 +311,8 @@
       <div class="social-icons">
         <i class="fa fa-facebook"></i>
         <i class="fa fa-instagram"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-youtube"></i>
       </div>
     </div>
     
