added social links

--- a/index.html
+++ b/index.html
@@ -309,10 +309,18 @@
         </ul>
       </div>
       <div class="social-icons">
-        <i class="fa fa-facebook"></i>
-        <i class="fa fa-instagram"></i>
-        <i class="fa fa-twitter"></i>
-        <i class="fa fa-youtube"></i>
+        <a href="https://www.facebook.com/Xander.Electronics/" target="_blank">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a href="https://www.instagram.com/xanderelectronics/" target="_blank">
+          <i class="fa fa-instagram language"></i>
+        </a>
+        <a href="https://twitter.com/xanderelectr" target="_blank">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="https://www.youtube.com/channel/UC1ifxZW1HHmOrjfXGMfhHIQ" target="_blank">
+          <i class="fa fa-youtube"></i>
+        </a>     
       </div>
     </div>
     
